components/ua/authenticate-frontend-users/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticate-frontend-users
spec:
  template:
    spec:
      containers:
        - name: authenticate-frontend
          image: ghcr.io/isisbusapps/authenticate-frontend@sha256:f1f26aab09a9af6c2b2fe9449ca38bc5c7605bdd78be6786c8a76a212c56e112
          volumeMounts:
            - mountPath: /front_end/config/allowed-redirects.json
              name: allowed-redirects
              subPath: allowed-redirects.json
            - mountPath: /front_end/config/internal-redirects.json
              name: internal-redirects
              subPath: internal-redirects.json
      volumes:
        - name: allowed-redirects
          configMap:
            name: allowed-redirects-users
        - name: internal-redirects
          configMap:
            name: internal-redirects-users
