components/ua/authenticate-frontend-users/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authenticate-frontend-users
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "devusers.facilities.rl.ac.uk"
      secretName: facilities-tls-certificate
  rules:
    - host: "devusers.facilities.rl.ac.uk"
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authenticate-frontend-users
                port:
                  number: 3000
